tests/bad_programs/type_errors/int_leq_true.nc
int main() {
    if (8 <= true) {
        return 0;
    } else {
        return 1;
    }
}
